update login endpoint